@@ -47,7 +47,7 @@ namespace Marvel {
         ImageButton, TimePicker, DatePicker, ColorButton,
         ManagedColumns, ColumnSet, NextColumn, Logger,
         AboutWindow, DocWindow, DebugWindow, MetricsWindow,
-        StyleWindow, FileDialog
+        StyleWindow, FileDialog, TabButton
     };
 
     //-----------------------------------------------------------------------------
